# perky

./: LICENSE  README.md  perky.py  pyproject.toml
.github/workflows/: coverage.yml
perky/: __init__.py  tokenize.py  transform.py  utility.py
tests/: benchmark_perky.py  perkytestlib.py  test_all.py  test_input.txt  test_perky.py  test_tokenize.py  test_transform.py  test_utility.py
tests/include_dict/: main.pky
tests/include_list/: main.pky
tests/include_nested/: included.pky  main.pky
tests/include_path/dir1/: main.pky
tests/include_path/dir2/: included.pky
